--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- CSS FILE -->
     <link rel="stylesheet" href="./style.css" type="text/css" />
   </head>
+
   <body>
     <header class="header">
       <h1 class="logo-name">Shayan Talebian</h1>
@@ -23,5 +24,15 @@
         </a>
       </div>
     </header>
+
+    <div class="main">
+      <aside>
+        <p>Sidebar Content</p>
+      </aside>
+
+      <main>
+        <p>Main Content</p>
+      </main>
+    </div>
   </body>
 </html>
