Creating navbar inside the main page

--- a/index.html
+++ b/index.html
@@ -26,12 +26,26 @@
     </header>
 
     <div class="main">
-      <aside>
-        <p>Sidebar Content</p>
-      </aside>
+      <aside></aside>
 
       <main>
-        <p>Main Content</p>
+        <nav class="main-navbar">
+          <a href="#" class="main-logo"><img src="./logo.webp" alt="" /></a>
+          <ul>
+            <li class="main-li">
+              <a href="#">Home</a>
+            </li>
+            <li class="main-li">
+              <a href="#">Courses</a>
+            </li>
+            <li class="main-li">
+              <a href="#">Testimonials</a>
+            </li>
+            <li class="main-li">
+              <a href="#">About us</a>
+            </li>
+          </ul>
+        </nav>
       </main>
     </div>
   </body>
