Creating navbar inside the aside element

--- a/index.html
+++ b/index.html
@@ -26,7 +26,25 @@
     </header>
 
     <div class="main">
-      <aside></aside>
+      <aside>
+        <nav class="aside-navbar">
+          <a href="#" class="aside-logo"><img src="./logo.webp" alt="" /></a>
+          <ul class="aside-ul">
+            <li class="aside-li">
+              <a href="#">Home</a>
+            </li>
+            <li class="aside-li">
+              <a href="#">Courses</a>
+            </li>
+            <li class="aside-li">
+              <a href="#">Testimonials</a>
+            </li>
+            <li class="aside-li">
+              <a href="#">About us</a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
 
       <main>
         <nav class="main-navbar">
