Creating cards using CSS grid

--- a/index.html
+++ b/index.html
@@ -1,70 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex Box | Navbar + Main + Aside</title>
     <!-- CSS FILE -->
     <link rel="stylesheet" href="./style.css" type="text/css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="header">
-      <h1 class="logo-name">Shayan Talebian</h1>
-      <div class="navbar">
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Support</a></li>
-          </ul>
-        </nav>
-        <a href="#" class="logo">
-          <img src="./logo.png" alt="Botostart logo" />
-        </a>
-      </div>
+        <h1 class="logo-name">Shayan Talebian</h1>
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="logo">
+                <img src="./logo.png" alt="Botostart logo" />
+            </a>
+        </div>
     </header>
 
     <div class="main">
-      <aside>
-        <nav class="aside-navbar">
-          <a href="#" class="aside-logo"><img src="./logo.webp" alt="" /></a>
-          <ul class="aside-ul">
-            <li class="aside-li">
-              <a href="#">Home</a>
-            </li>
-            <li class="aside-li">
-              <a href="#">Courses</a>
-            </li>
-            <li class="aside-li">
-              <a href="#">Testimonials</a>
-            </li>
-            <li class="aside-li">
-              <a href="#">About us</a>
-            </li>
-          </ul>
-        </nav>
-      </aside>
+        <aside>
+            <nav class="aside-navbar">
+                <a href="#" class="aside-logo"><img src="./logo.webp" alt="" /></a>
+                <ul class="aside-ul">
+                    <li class="aside-li">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="aside-li">
+                        <a href="#">Courses</a>
+                    </li>
+                    <li class="aside-li">
+                        <a href="#">Testimonials</a>
+                    </li>
+                    <li class="aside-li">
+                        <a href="#">About us</a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
 
-      <main>
-        <nav class="main-navbar">
-          <a href="#" class="main-logo"><img src="./logo.webp" alt="" /></a>
-          <ul>
-            <li class="main-li">
-              <a href="#">Home</a>
-            </li>
-            <li class="main-li">
-              <a href="#">Courses</a>
-            </li>
-            <li class="main-li">
-              <a href="#">Testimonials</a>
-            </li>
-            <li class="main-li">
-              <a href="#">About us</a>
-            </li>
-          </ul>
-        </nav>
-      </main>
+        <main>
+            <nav class="main-navbar">
+                <a href="#" class="main-logo"><img src="./logo.webp" alt="" /></a>
+                <ul>
+                    <li class="main-li">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="main-li">
+                        <a href="#">Courses</a>
+                    </li>
+                    <li class="main-li">
+                        <a href="#">Testimonials</a>
+                    </li>
+                    <li class="main-li">
+                        <a href="#">About us</a>
+                    </li>
+                </ul>
+            </nav>
+        </main>
     </div>
-  </body>
+
+    <div class="cards">
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="./javascript.png" alt="Botostart logo" />
+            <div class="card-content">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit similique atque unde
+                </p>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
